--- a/app/Lib/Rscripts/Rapport_subcategories.Rmd
+++ b/app/Lib/Rscripts/Rapport_subcategories.Rmd
@@ -12,14 +12,13 @@ output:
 
   
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
-load(file="Random data with and without ans options.RData")
+load("oefendata.RData")
 ```
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE}
 library(ggplot2)
 library(pander)
 library(plyr)
-
 ```
 
 
@@ -145,7 +144,7 @@ CreateDf <- function(input.correct, item.sum, item.tot.cor, item.perc){
                            perc.col = ifelse(item.perc < 40, 0, ifelse(item.perc > 70, 1, 1/75 * item.perc - 7/30)),
                            # From 0 to 40 perc correct the bar is coloured red. From 40 till 70 colours go from .3 till .7 (orange till green-ish. From 70 till 100, bar is coloured green.
                            
-                           irc.col = ifelse(item.tot.cor < 0, 0, ifelse(item.tot.cor > .1, 1, 4 * item.tot.cor + 3/10))
+                           irc.col = ifelse(item.tot.cor < 0, 0, ifelse(item.tot.cor > .05, 1, 8 * item.tot.cor + 3/10))
                            # Below 0 IRC, an item is colour red. Between 0 and .1 an item is coloured orange. Higher than .1 an item is coloured green.
   )
   
@@ -194,7 +193,7 @@ IRCPlotOverall <- function(correct.df){
 ## Item rest correlations
 
 Plot of Item Rest Correlations per item: The correlation between an item (0 for wrong answers and 1 for right answers) and the sum of all other items.
-Items with a correlation *higher than .1* indicate that students who answered this item correctly answered the other items more often correctly than students who answered this item incorrectly. Thus it is coloured *green*. Items with a correlation *lower than 0* indicate no relationship between this item and the other items, thus it is coloured *red*. *Between 0 and .1*, an item is coloured *orange*.
+Items with a correlation *higher than .05* indicate that students who answered this item correctly answered the other items more often correctly than students who answered this item incorrectly. Thus it is coloured *green*. Items with a correlation *lower than 0* indicate no relationship between this item and the other items, thus it is coloured *red*. *Between 0 and .05*, an item is coloured *orange*.
 
 ')
   
@@ -220,20 +219,20 @@ IRCPlotOverall(correct.df)
 ```{r, echo = FALSE, eval = TRUE, warning= FALSE, fig.width = 11}
 
 # Create extra variables for the colours in the bar plots
-PercCol <- function(item.perc, Correct){
+PercCol <- function(percentage, Correct){
   # Calculate colours for the percentage answer options.
   #Args:
-  # item.perc: Percentage answered per answer options
-  # correct:   Vector of "Correct" and "Incorrect" of same length of item.perc
+  # percentage: Percentage answered per answer options
+  # correct:   Vector of "Correct" and "Incorrect" of same length of percentage
   #
   #Returns:
   # Value between 0 and 1 with 0 corresponding to red and 1 to green in the plots.
   # For the correct answers: lower than 40 returns 0, higher than 70 returns 1, and in between returns a scale from .3 till .7.
   # For the incorrect answers: difference between lowest correct answer option and incorrect answer options are calculated.
   # If the difference is bigger than 0, it returns 0. If difference is smaller than -10, it returns 1. In between returns a scale from .3 till .7.
-  perc.col <- vector()
-  perc.col[Correct == "Correct"] <- ifelse(item.perc[Correct == "Correct"] < 40, 0, ifelse(item.perc[Correct == "Correct"] > 70, 1, 3/200 * item.perc - 3/10))
-  dif <- item.perc[Correct == "Incorrect"] - min(item.perc[Correct == "Correct"])
+  perc.col <- vector("numeric", length = length(Correct))
+  perc.col[Correct == "Correct"] <- ifelse(percentage[Correct == "Correct"] < 40, 0, ifelse(percentage[Correct == "Correct"] > 70, 1, 1/75 * percentage[Correct == "Correct"] - 7/30))
+  dif <- percentage[Correct == "Incorrect"] - min(percentage[Correct == "Correct"])
   perc.col[Correct == "Incorrect"] <- ifelse(dif >= 0, 0, ifelse(dif < -10, 1, -1/25 * dif + 3/10))
   return(perc.col)
 }
@@ -247,11 +246,11 @@ IrcCol <- function(IRC, Correct){
   #
   #Returns:
   # Value between 0 and 1 with 0 corresponding to red and 1 to green in the plots.
-  # For the correct answers: lower than 0 returns 0, higher than .1 returns 1, and in between returns a scale from .3 till .7.
+  # For the correct answers: lower than 0 returns 0, higher than .05 returns 1, and in between returns a scale from .3 till .7.
   # For the incorrect answers: difference between incorrect answer options and lowest correct answer option are calculated.
   # If the difference is bigger than 0, it returns 0. If difference is smaller than -.05, it returns 1. In between returns a scale from .3 till .7.
   IRC.col <- vector()
-  IRC.col[Correct == "Correct"] <- ifelse(IRC[Correct == "Correct"] < 0, 0, ifelse(IRC[Correct == "Correct"] > .1, 1, 3 * IRC + 3/10))
+  IRC.col[Correct == "Correct"] <- ifelse(IRC[Correct == "Correct"] < 0, 0, ifelse(IRC[Correct == "Correct"] > .05, 1, 8 * IRC[Correct == "Correct"] + 3/10))
   dif <- IRC[Correct == "Incorrect"] - min(IRC[Correct == "Correct"])
   IRC.col[Correct == "Incorrect"] <- ifelse(dif >= 0, 0, ifelse(dif < -.05, 1, -8 * dif + 3/10))
   return(IRC.col)
@@ -362,7 +361,7 @@ IRCPlotAnswOpt <- function(ans.opt.df, items.in.plot){
 
 Item rest correlation (IRC) plot of all answer options per question. The IRC is the correlation between an answer option (1 for students who chose this options and 0 for student who did not) and the sumscore on all other items. **White** bars represent the **right** answer option(s) and **black** the **wrong** options. 
 
-The border represents the performance of an item. The **right** answer options are coloured *green* if the IRC is *higher than .1*. In that case, students who picked the right answer option scored higher on all other items than student who did not pick the right option. They are coloured *red* if the IRC is *less than 0*. In that case, students who picked the right answer option scored equally or worse on the other items than students who picked the other options. Between *0 and .1*, the option is coloured *orange*.
+The border represents the performance of an item. The **right** answer options are coloured *green* if the IRC is *higher than .05*. In that case, students who picked the right answer option scored higher on all other items than student who did not pick the right option. They are coloured *red* if the IRC is *less than 0*. In that case, students who picked the right answer option scored equally or worse on the other items than students who picked the other options. Between *0 and .05*, the option is coloured *orange*.
 
 The **wrong** answer options are coloured *green* if the IRC is *more than .1 lower than the right option*. In that case, students who answered the other items incorrectly, usually answered this item incorrectly as well. They are coloured *red* if the IRC is *equal or higher than the right answer option*. In that case, students who answered the other items correctly may have answered this item incorrectly. In between these two, the option is coloured *orange*.
 
@@ -376,9 +375,7 @@ The **wrong** answer options are coloured *green* if the IRC is *more than .1 lo
         facet_grid(. ~ id, scales = "free_x", space = "free_x") + # Display the different items
         scale_fill_manual(values = c("Incorrect" = "Black" ,"Correct" = "White"), guide = FALSE) + # Fill in the bars: White for right answer options, Black for wrong answer options
         scale_colour_gradient(low = "red", high = "green", limits = c(0, 1), guide = FALSE)  + # Create colour boundray: Green = "right" (low for wrong answer options, high for right answer options)
-        coord_cartesian(ylim = c(ifelse(min(ans.opt.df$IRC) < -.3, min(ans.opt.df$IRC) - .01, -.3),
-                                 ifelse(max(ans.opt.df$IRC) > .4, max(ans.opt.df$IRC) + .01, .4))
-        ) + # Change y-axis limit to either the maximum IRC or .4 and minimum IRC or -.3
+        coord_cartesian(ylim = c(min(ans.opt.df$IRC) - .01, max(ans.opt.df$IRC)  + .01)) + # Change y-axis limit to either the maximum and minimum IRC
         labs(x = "Answer Options") + #x axis name
         theme_bw() + 
         theme(axis.text.x = element_text(size = 8), # Font size of text by tick marks of the x-asis
@@ -407,7 +404,7 @@ Cumulative Distribution showing all possible scores and the percentage of studen
 CumHist <- function(input.correct){
   totaal <- rowSums(input.correct)
   heights <- length(totaal)
-  h = heights[1]
+  h <- heights[1]
   
   n <- sort(unique(totaal))
   
@@ -420,34 +417,64 @@ CumHist <- function(input.correct){
   cesuurlijnen <- seq(0.2, 0.8, 0.2) * nrow(input.correct)
   gridlijnen <- round(seq(0, nrow(input.correct), (nrow(input.correct)/25)), 0)
   
-  gridlijnen <- gridlijnen[-grep(paste(cesuurlijnen, collapse = "|"), gridlijnen)]
+  gridlijnen <- gridlijnen[-grep(paste(round(cesuurlijnen,0), collapse = "|"), gridlijnen)]
   
   heights <- heights[1:length(unique(totaal))]
   percent <- heights/length(totaal)*100
   df <- data.frame(score = sort(unique(totaal)), total = heights, percent = round(percent,2))
   
-  h <- ggplot(data = df, aes(x = score, y = total)) + 
+  vec <- df[1,1]: df[nrow(df),1] # save all possible total scores
+  
+  # find if a total score is missing and save that number
+  
+  mis <- NA
+  if(sum(!(vec %in% df[,1]) != 0))
+  {
+    mis = vec[!(vec %in% df[,1])]
+  }
+
+  if(!is.na(mis))
+  {
+    df[(nrow(df)+1), ] <- c(mis, 0, 0) # add row with missing total score
+    df <- df[order(df$score),]
+  }
+
+  
+  # if no one gets a certain total score, replace the 0 with the next total score
+  df[which(df[,2] == 0, arr.ind = TRUE),2] <- df[(which(df[,2] == 0, arr.ind = TRUE) + 1),2]
+  df[which(df[,3] == 0, arr.ind = TRUE),3] <- df[(which(df[,3] == 0, arr.ind = TRUE) + 1),3]
+  
+  g <- ggplot(data = df, aes(x = score, y = total)) + 
     geom_hline(yintercept = c(gridlijnen), linetype = "solid", colour = "gray80") +  
     geom_hline(yintercept = cesuurlijnen, linetype = "dashed", size = 0.75, colour = "black") +
     geom_histogram(stat = "identity", binwidth = 1) + 
     xlab("Total score") + ylab("% students with score or higher") + 
     scale_y_continuous(breaks = c(0, cesuurlijnen, nrow(input.correct)), labels = c(seq(0, 100, 20))) +
-    scale_x_continuous(limits = c((df[1,1]-1), ncol(input.correct)), breaks = 1:ncol(input.correct), expand=c(0,0)) + 
+    scale_x_continuous(limits = c((df[1,1]-1), ncol(input.correct)), breaks = 0:ncol(input.correct), expand=c(0,0)) + 
     theme_bw() +
     theme(panel.grid = element_blank())
   
-  print(h)
+  print(g)
 }
 
 CumHist(input.correct)
 
 ```
 
+# Categories
+
+```{r, echo = FALSE, eval = TRUE, warnings = FALSE, message = FALSE, results = 'asis', fig.width = 11}
+for(s in 1:nrow(error))
+{
+  cat(paste("### Sub category analysis could not be performed for category", error[s,1], "as this subcategory holds less than three items.", sep = " "))
+  cat('\n\n')
+}
+```
 
 ```{r, echo = FALSE, eval = TRUE, warnings = FALSE, message = FALSE, results = 'asis', fig.width = 11}
 ## Do the whole script above for every sub category
 if(is.list(results[[1]])){
-  for(sub in 2:length(results)){
+  for(sub in 1:length(subcats)){
     
     cat('\\pagebreak
 
@@ -455,11 +482,11 @@ if(is.list(results[[1]])){
     
     cat(paste('
               
-# Category', sub - 1 ), '
+## Category', subcats[sub] ), '
         
         ')
     
-    retrieve(results, n = sub, sub.cat = TRUE) # Get objects in list to global environment
+    retrieve(results, n = (sub + 1), sub.cat = TRUE) # Get objects in list to global environment
     
     item.list <- CreateItemList(input.correct = input.correct, n.answer.op = n.answer.op, freq.answer.op = freq.answer.op, perc.answer.op = perc.answer.op, answer.op.tot.cor = answer.op.tot.cor, item.sum = item.sum, item.perc = item.perc, item.tot.cor = item.tot.cor)
     
@@ -482,8 +509,8 @@ if(is.list(results[[1]])){
     cat('## Cumulative Distribution')
     cat('\n\n')
     CumHist(input.correct)
-
   }
 }
 
 ```
+
